cmake_minimum_required(VERSION 2.8.4)
project(leecode)
add_subdirectory(3nPlus1)
add_subdirectory(Minesweeper)
add_subdirectory(UVaTrip)
add_subdirectory(LcdDisplay)
add_subdirectory(GoingToWar)
add_subdirectory(GraphicalEditor)
add_subdirectory(Interpreter)
add_subdirectory(CheckTheCheck)
add_subdirectory(AustralianVoting)
add_subdirectory(Jolly)

